--- a/test/output.css
+++ b/test/output.css
@@ -1,14 +1,14 @@
 body {
-  color: rgba(128,255,0,0.5);
-  background-color: rgb(128,234,255);
+  color: rgba(128, 255, 0, 0.5);
+  background-color: rgb(128, 234, 255);
 }
 
 div {
-  color: rgb(255,255,255);
-  background-color: rgb(0,0,0);
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
 }
 
 a {
-  color: rgb(128,128,128);
-  background-color: rgb(128,128,128);
+  color: rgb(128, 128, 128);
+  background-color: rgb(128, 128, 128);
 }
